[package]
name = "slog-nested-values-example"
version = "0.1.0"
authors = ["Nick Alexander <nalexander@mozilla.com>"]
edition = "2018"
license = "MPL-2.0 OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_trace", "nested-values"] }
slog-json = { version = "2.3", features = ["nested-values"] }
